# vox-machina

./: .copier-answers.yml  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  examples.md
notes/: roadmap.md
src/vox_machina/: __init__.py  banner.py  cli.py  config.py  diarize.py  format.py  label.py  machina_app.py  merge.py  models.py  obsidian.py  prepare.py  rename.py  summarize.py  transcribe.py  vox_app.py
src/vox_machina/prompts/: base.md.j2  interview.md  interview.md.j2  meeting_notes.md  meeting_notes.md.j2  retro.md  retro.md.j2  standup.md  standup.md.j2  talk.md.j2
tests/: test_cli.py  test_config.py  test_format.py  test_label.py  test_merge.py  test_models.py  test_obsidian.py  test_rename.py  test_summarize.py  test_vox_machina.py
