[project]
name = "vox-machina"
version = "0.6.0"
description = "🦻 Local voice transcription with speaker diarization and LLM-powered summarization"
authors = [
    { name = "Niklas Baier" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0.0",
    "faster-whisper>=1.1.0",
    "rich>=13.0.0",
    "typer>=0.15.0",
    "pyannote-audio>=3.3.0",
    "questionary>=2.1.0",
    "ollama>=0.4.0",
]

[project.scripts]
vox = "vox_machina.cli:app"

[project.urls]
Homepage = "https://github.com/niklastypes/vox-machina"
Repository = "https://github.com/niklastypes/vox-machina"
Changelog = "https://github.com/niklastypes/vox-machina/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.12.0",
    "ty>=0.0.1",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vox_machina"]

[tool.ty.environment]
python-version = "3.13"
root = ["src", "."]

[tool.ty.rules]
unused-ignore-comment = "warn"
redundant-cast = "warn"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["vox_machina"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80
